grunt build process for JS

--- a/Ux/ReliusWeb/html/working/working.html
+++ b/Ux/ReliusWeb/html/working/working.html
@@ -20,11 +20,6 @@
     <link rel="stylesheet/less" href="../resources/css/main.less">
     <link rel="stylesheet" href="../resources/css/glyphicons.min.css">
     <!-- <link rel="stylesheet" href="../resources/css/main.min.css">     -->
-    <script src="../resources/js/vendor/modernizr-2.6.2.min.js"></script>
-    <script src="../resources/js/vendor/jquery-1.10.2.min.js"></script>
-    <script src="../resources/js/vendor/bootstrap-datepicker.js"></script>
-    <script src="../resources/js/custom.js"></script>
-    <script src="../resources/js/manageInvestments.js"></script>
   </head>
   <body>
   <!-- Warning for IE versions less than 9 -->
@@ -289,6 +284,7 @@
                 c0.2-0.2,0.4-0.2,0.6,0l2.4,2.4c0.2,0.2,0.4,0.2,0.6,0l6.7-6.7c0.2-0.2,0.4-0.2,0.6,0L36.9,6.8z"/>
             </g>
             </svg>
+            <br class='mobile'>
             <div>Change Elections</div>
           </div>
         </li>
@@ -309,6 +305,7 @@
             l2.2-2l-4.3-4h-7.1c-0.3,0-0.6,0.2-0.6,0.5v2C17.9,5.8,18.2,6,18.5,6z"/>
             </g>
             </svg>
+            <br class='mobile'>
             <div>Move Money</div>
           </div>
         </li>
@@ -334,6 +331,7 @@
             <rect x="18.6" y="1.8" fill="#010101" width="8.7" height="2.6"/>
             </g>
             </svg>
+            <br class='mobile'>
             <div>Rebalance</div>
           </div>
         </li>
@@ -364,109 +362,21 @@
             c0,0.1,0,0.2,0,0.3V12.4z"/>
             </g>
             </svg>
-            <div>Change Contr<span class='mobile'>.</span><span class='desktop'>ibution Rate</span></div>
+            <br class='mobile'>
+            <div>Change Contribution</div>
           </div>
         </li>
       </ul>
     </nav>
 
-<!--     <nav class="stickynav navbar-fixed-top nav-justified">
-      <ul class="nav">
-        <li class='col-sm-3'>
-          <div class="nav-item">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             viewBox="0 0 50 20" enable-background="new 0 0 50 20" xml:space="preserve">
-            <path fill="#010101" d="M17.9,16 M29.7,4.2 M19.6,16.8 M17,15.1c-1.9,0-3.4-1.5-3.4-3.4V3.3C13.7,1.5,15.2,0,17,0h8.4
-              c1.9,0,3.4,1.5,3.4,3.4h-1.7V2.5c0-0.5-0.4-0.8-0.8-0.8H16.2c-0.5,0-0.8,0.4-0.8,0.8v10.1c0,0.5,0.4,0.8,0.8,0.8H17V15.1z"/>
-            <g id="check_1_">
-              <path fill="#010101" d="M31.9,15.1v2.3c0,0.5-0.4,0.8-0.8,0.8H20.9c-0.5,0-0.8-0.4-0.8-0.8V7.3c0-0.5,0.4-0.8,0.8-0.8h9L31.4,5
-                c-0.4-0.1-0.8-0.2-1.2-0.2h-8.4c-1.9,0-3.4,1.5-3.4,3.4v8.4c0,1.9,1.5,3.4,3.4,3.4h8.4c1.9,0,3.4-1.5,3.4-3.4v-3.1L31.9,15.1z"/>
-              <path fill="#010101" d="M36.9,6.8C37,7,37,7.3,36.9,7.4l-9.3,9.3c-0.2,0.2-0.4,0.2-0.6,0l-5-5c-0.2-0.2-0.2-0.4,0-0.6l2-2
-                c0.2-0.2,0.4-0.2,0.6,0l2.4,2.4c0.2,0.2,0.4,0.2,0.6,0l6.7-6.7c0.2-0.2,0.4-0.2,0.6,0L36.9,6.8z"/>
-            </g>
-            </svg>
-            <div>Change Elections</div>
-          </div>
-        </li>
-        <li class='col-sm-3'>
-          <div class="nav-item">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           viewBox="0 0 50 20" enable-background="new 0 0 50 20" xml:space="preserve">
-            <g id="usd_3_">
-            <path fill="#010101" d="M15.6,13.4c0-3.7-3.5-4.5-4.6-4.8c-0.4-0.1-0.3-0.2-1.1-0.3V4.4c1.5,0.3,1.8,1.1,1.9,2.6h3.2
-            c0-3.8-2.1-5.2-5.1-5.5V0.2H8.4v1.2C5.9,1.7,3.5,3.3,3.5,6.4c0,3.1,2.3,4,4.5,4.7c0.1,0,0.2,0.1,0.4,0.1v4.5c-1.2-0.4-2-1.1-2-2.6
-            H3.2c0,3,2.3,5.2,5.2,5.5v1.2h1.5v-1.2C13.7,18.3,15.6,16.2,15.6,13.4z M6.8,6.1c0-1.1,0.8-1.6,1.7-1.8v3.5
-            C7.1,7.3,6.8,6.9,6.8,6.1z M9.9,15.8v-4.1c1.5,0.4,2.3,0.9,2.3,2.1C12.2,15.1,11.4,15.6,9.9,15.8z"/>
-            </g>
-            <g id="random_2_">
-            <path fill="#010101" d="M45.7,15.2c0.2,0.2,0.2,0.4,0,0.6l-5.3,3.9c-0.2,0.2-0.4,0.1-0.4-0.2V17h-3.6l-4.3-4l2.2-2l3.3,3h2.4v-2.5
-            c0-0.3,0.2-0.4,0.4-0.2L45.7,15.2z M40.1,6v2.5c0,0.3,0.2,0.4,0.4,0.2l5.2-3.9c0.2-0.2,0.2-0.4,0-0.6l-5.3-3.9
-            c-0.2-0.2-0.4-0.1-0.4,0.2V3h-3.6L24.4,14h-6c-0.3,0-0.6,0.2-0.6,0.5v2c0,0.3,0.3,0.5,0.6,0.5h7.1L37.7,6H40.1z M18.5,6h6l3.3,3
-            l2.2-2l-4.3-4h-7.1c-0.3,0-0.6,0.2-0.6,0.5v2C17.9,5.8,18.2,6,18.5,6z"/>
-            </g>
-            </svg>
-            <div>Move Money</div>
-          </div>
-        </li>
-        <li class='col-sm-3'>
-          <div class="nav-item">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-           viewBox="0 0 50 20" enable-background="new 0 0 50 20" xml:space="preserve">
-            <g id="usd_5_">
-            <path fill="#010101" d="M16,12.9c0-3.2-3-3.9-4-4.1c-0.3-0.1-0.3-0.2-0.9-0.2V5.1c1.3,0.2,1.6,1,1.6,2.3h2.8c0-3.2-1.8-4.5-4.4-4.8
-            V1.6H9.8v1C7.7,2.8,5.6,4.2,5.6,6.9c0,2.7,2,3.5,3.9,4c0.1,0,0.2,0.1,0.3,0.1v3.9c-1-0.3-1.7-1-1.7-2.3H5.3c0,2.6,2,4.5,4.5,4.8v1
-            h1.3v-1C14.4,17.2,16,15.3,16,12.9z M8.4,6.6c0-1,0.7-1.4,1.4-1.6v3C8.7,7.6,8.4,7.3,8.4,6.6z M11.1,15v-3.5c1.3,0.4,2,0.8,2,1.8
-            C13.1,14.4,12.4,14.9,11.1,15z"/>
-            </g>
-            <g id="adjust_x5F_alt_1_">
-            <path fill="#010101" d="M36.8,12.2v-0.9h7.8V8.7h-7.8V7.8c0-0.5-0.4-0.9-0.9-0.9h-2.6c-0.5,0-0.9,0.4-0.9,0.9v0.9v2.6v0.9
-            c0,0.5,0.4,0.9,0.9,0.9h2.6C36.4,13,36.8,12.7,36.8,12.2z M34.2,12.2V7.8h0.4v4.3H34.2z"/>
-            <path fill="#010101" d="M41.1,19.1v-0.9h3.5v-2.6h-3.5v-0.9c0-0.5-0.4-0.9-0.9-0.9h-2.6c-0.5,0-0.9,0.4-0.9,0.9v0.9v2.6v0.9
-            c0,0.5,0.4,0.9,0.9,0.9h2.6C40.7,20,41.1,19.6,41.1,19.1z M38.5,19.1v-4.3H39v4.3H38.5z"/>
-            <rect x="18.6" y="8.7" fill="#010101" width="13" height="2.6"/>
-            <path fill="#010101" d="M32.4,5.2V4.4h12.2V1.8H32.4V0.9c0-0.5-0.4-0.9-0.9-0.9H29c-0.5,0-0.9,0.4-0.9,0.9v0.9v2.6v0.9
-            c0,0.5,0.4,0.9,0.9,0.9h2.6C32.1,6.1,32.4,5.7,32.4,5.2z M29.8,5.2V0.9h0.4v4.3H29.8z"/>
-            <rect x="18.6" y="15.6" fill="#010101" width="17.4" height="2.6"/>
-            <rect x="18.6" y="1.8" fill="#010101" width="8.7" height="2.6"/>
-            </g>
-            </svg>
-            <div>Rebalance</div>
-          </div>
-        </li>
-        <li class='col-sm-3'>
-          <div class="nav-item">        
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            viewBox="0 0 50 20" enable-background="new 0 0 50 20" xml:space="preserve">
-            <g id="refresh_3_">
-            <path fill="#010101" d="M17.2,12.3l-2.4,0c-0.7-2.7-0.2-5.7,1.5-8.2c3.1-4.3,8.9-5.3,13.3-2.5l0,0L31,0.1c0.1-0.2,0.3-0.2,0.4,0.1
-            l1.6,5.1c0.1,0.2-0.1,0.4-0.3,0.4l-5.3,0.1c-0.2,0-0.3-0.1-0.2-0.3l1.2-1.6c-3.3-2.1-7.6-1.3-9.9,1.9c-1.4,2-1.7,4.5-1,6.7
-            L17.2,12.3z M33.9,7.6l-2.5,0c0.7,2.2,0.4,4.6-1,6.6c-2.3,3.2-6.6,4-9.9,1.9l1.2-1.6c0.1-0.2,0.1-0.3-0.2-0.3l-5.3,0.1
-            c-0.2,0-0.4,0.2-0.3,0.4l1.6,5.1c0.1,0.2,0.2,0.2,0.4,0.1l1.2-1.7l0,0c4.4,2.9,10.2,1.8,13.3-2.5C34.1,13.3,34.5,10.3,33.9,7.6z"/>
-            </g>
-            <g>
-            <path fill="#010101" d="M20.3,7.1c0-0.2,0-0.5,0.1-0.7c0.1-0.2,0.2-0.4,0.4-0.6c0.2-0.2,0.4-0.3,0.6-0.4c0.2-0.1,0.5-0.1,0.8-0.1
-            c0.3,0,0.6,0,0.8,0.1c0.2,0.1,0.4,0.2,0.6,0.4C23.8,6,24,6.2,24,6.4c0.1,0.2,0.1,0.4,0.1,0.7v0.5c0,0.2,0,0.5-0.1,0.7
-            c-0.1,0.2-0.2,0.4-0.4,0.6c-0.2,0.2-0.4,0.3-0.6,0.4c-0.2,0.1-0.5,0.1-0.8,0.1c-0.3,0-0.6,0-0.8-0.1C21.2,9.1,21,9,20.8,8.8
-            c-0.2-0.2-0.3-0.3-0.4-0.6c-0.1-0.2-0.1-0.4-0.1-0.7V7.1z M21.6,7.6c0,0.1,0,0.2,0,0.3c0,0.1,0.1,0.2,0.1,0.2
-            c0.1,0.1,0.1,0.1,0.2,0.2c0.1,0,0.2,0.1,0.3,0.1c0.1,0,0.2,0,0.3-0.1c0.1,0,0.1-0.1,0.2-0.2c0-0.1,0.1-0.1,0.1-0.2s0-0.2,0-0.3V7.1
-            c0-0.1,0-0.2,0-0.3s-0.1-0.2-0.1-0.2c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1,0-0.2-0.1-0.3-0.1S22,6.4,22,6.5c-0.1,0-0.1,0.1-0.2,0.2
-            c-0.1,0.1-0.1,0.1-0.1,0.2c0,0.1,0,0.2,0,0.3V7.6z M22.6,13.4L21.7,13l4.2-6.7l0.9,0.5L22.6,13.4z M24.4,12c0-0.2,0-0.5,0.1-0.7
-            c0.1-0.2,0.2-0.4,0.4-0.6c0.2-0.2,0.4-0.3,0.6-0.4c0.2-0.1,0.5-0.1,0.8-0.1c0.3,0,0.6,0,0.9,0.1c0.2,0.1,0.4,0.2,0.6,0.4
-            c0.2,0.2,0.3,0.3,0.4,0.6c0.1,0.2,0.1,0.4,0.1,0.7v0.5c0,0.2,0,0.5-0.1,0.7c-0.1,0.2-0.2,0.4-0.4,0.6c-0.2,0.2-0.4,0.3-0.6,0.4
-            c-0.2,0.1-0.5,0.1-0.8,0.1c-0.3,0-0.6,0-0.8-0.1c-0.2-0.1-0.4-0.2-0.6-0.4c-0.2-0.2-0.3-0.3-0.4-0.6c-0.1-0.2-0.1-0.4-0.1-0.7V12z
-            M25.7,12.4c0,0.1,0,0.2,0.1,0.3c0,0.1,0.1,0.2,0.1,0.2C26,13,26,13,26.1,13.1c0.1,0,0.2,0.1,0.3,0.1c0.1,0,0.2,0,0.3-0.1
-            c0.1,0,0.1-0.1,0.2-0.2c0-0.1,0.1-0.1,0.1-0.2c0-0.1,0-0.2,0-0.3V12c0-0.1,0-0.2,0-0.3c0-0.1-0.1-0.2-0.1-0.2
-            c-0.1-0.1-0.1-0.1-0.2-0.2c-0.1,0-0.2-0.1-0.3-0.1c-0.1,0-0.2,0-0.3,0.1c-0.1,0-0.1,0.1-0.2,0.2c-0.1,0.1-0.1,0.1-0.1,0.2
-            c0,0.1,0,0.2,0,0.3V12.4z"/>
-            </g>
-            </svg>
-            <div>Change Contr<span class='mobile'>.</span><span class='desktop'>ibution Rate</span></div>
-          </div>
-        </li>
-      </ul>
-    </nav> -->
-
     <div style='height: 800px;'></div>
+
+
+
+
+
+
+    
 
     <div class="totalBal">
       No Data
@@ -596,7 +506,12 @@
 
     </footer>
   
-  <script src="../resources/js/vendor/less.min.js" type="text/javascript"></script>
+    <script src="../resources/js/vendor/less.min.js" type="text/javascript"></script> 
+
+    <script src="../resources/js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="../resources/js/vendor/jquery-1.10.2.min.js"></script>
+    <script src="../resources/js/vendor/bootstrap-datepicker.js"></script>
+    <script src="../resources/js/dist/reliusadmin.js"></script>
 
   </body>
 </html>
